# reinvent

./: README.md
sessions/CNS201/: README.md
sessions/CNS204/: README.md
sessions/CNS205/: README.md
sessions/CNS207/: .gitignore  DEMO_GUIDE.md  README.md  eks-automode-cluster-1.31.yaml  eks-automode-cluster.yaml  python-app-workload-fixed.yaml  python-app-workload-restrictive.yaml
sessions/CNS207/python-app/: .dockerignore  Dockerfile  app.py  requirements.txt
sessions/CNS207/scripts/: build-and-push.sh  cleanup-cluster.sh  upgrade-cluster.sh
sessions/CNS208/: README.md
sessions/CNS209/: README.md
sessions/CNS210/: README.md
sessions/CNS301/: README.md
sessions/CNS303/: README.md
sessions/CNS305/: README.md
sessions/CNS314/: README.md
sessions/CNS317/: README.md
sessions/CNS322/: README.md
sessions/CNS328/: README.md
sessions/CNS331/: README.md
sessions/CNS332/: README.md
sessions/CNS344/: README.md
sessions/CNS354/: README.md
sessions/CNS355/: README.md
sessions/CNS356/: README.md
sessions/CNS357/: README.md
sessions/CNS377/: README.md
sessions/CNS401/: README.md
sessions/CNS405/: README.md
sessions/CNS407/: README.md
sessions/CNS410/: README.md
sessions/CNS414/: README.md
sessions/CNS417/: README.md
sessions/CNS418/: README.md
sessions/CNS419/: README.md
sessions/CNS420/: README.md
sessions/CNS421/: README.md
sessions/CNS422/: README.md
sessions/CNS422/code/: .env.demo  .env.development  .gitignore  Makefile  README.md
sessions/CNS422/code/agent/agent-ui/: DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  a2a_client.py  app.py  deploy.sh  pyproject.toml
sessions/CNS422/code/agent/agentcore-runtime/home-insurance/: .bedrock_agentcore.yaml  README.md  a2a_client.py  context.py  get_cognito_token.py  home_insurance.py  pyproject.toml  setup_venv.sh
sessions/CNS422/code/agent/agentcore-runtime/home-insurance/.bedrock_agentcore/home_insurance/: Dockerfile
sessions/CNS422/code/infrastructure/: .dockerignore  README.md  __init__.py  config.py  debug_create_claim.py  pyproject.toml  setup_venv.sh  test_eks_rest_simple.py  test_entry_points.py
sessions/CNS422/code/infrastructure/integration-tests/: README.md  __init__.py  conftest.py  pytest.ini  test_appointment_server_integration.py  test_customer_server_integration.py  test_technician_server_integration.py
sessions/CNS422/code/infrastructure/manifests/: README.md  deploy-with-ecr.sh
sessions/CNS422/code/infrastructure/manifests/base/: kustomization.yaml
sessions/CNS422/code/infrastructure/manifests/base/appointment-server/: deployment.yaml  ingress.yaml  service.yaml
sessions/CNS422/code/infrastructure/manifests/base/customer-server/: deployment.yaml  ingress.yaml  service.yaml
sessions/CNS422/code/infrastructure/manifests/base/technician-server/: deployment.yaml  ingress.yaml  service.yaml
sessions/CNS422/code/infrastructure/manifests/overlays/development/: appointment-ingress-patch.yaml  customer-ingress-patch.yaml  kustomization.yaml  technician-ingress-patch.yaml
sessions/CNS422/code/infrastructure/manifests/overlays/production/: appointment-ingress-patch.yaml  customer-ingress-patch.yaml  kustomization.yaml  technician-ingress-patch.yaml
sessions/CNS422/code/infrastructure/mcp_gateway/python/: README.md  pyproject.toml
sessions/CNS422/code/infrastructure/mcp_gateway/python/src/: __init__.py  delete_cognito.py  delete_credential_provider.py  delete_gateway.py  delete_gateway_targets.py  delete_s3_bucket.py  setup.py  setup_identity_gateway.py  test_connection.py  test_mcp_gateway.py  test_server.py  test_with_ui.py  utils.py
sessions/CNS422/code/infrastructure/mcp_servers/appointment_server/: Dockerfile  __init__.py  combined_server.py  server.py  server_rest.py  shared_data.py
sessions/CNS422/code/infrastructure/mcp_servers/customer_server/: Dockerfile  __init__.py  combined_server.py  server.py  server_rest.py  shared_data.py
sessions/CNS422/code/infrastructure/mcp_servers/technician_server/: Dockerfile  __init__.py  combined_server.py  server.py  server_rest.py  shared_data.py
sessions/CNS422/code/infrastructure/mock_data/: __init__.py  appointments.json  claims.json  customers.json  data_loader.py  demo_scenarios.json  technicians.json
sessions/CNS422/code/infrastructure/scripts/: substitute-domain.sh  verify-cleanup.sh
sessions/CNS422/code/infrastructure/shared/: __init__.py  models.py  utils.py
sessions/CNS422/code/infrastructure/terraform/: acm.tf  alb.tf  backend_override.tf.example  csi.tf  ecr.tf  eks.tf  external-dns.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
sessions/CNS422/code/infrastructure/testing_framework/: FRAMEWORK_SUMMARY.md  README.md  __init__.py  base_test_classes.py  eks_base_test_classes.py  eks_test_helpers.py  server_configs.py  test_helpers.py  test_templates.py
sessions/CNS422/code/infrastructure/testing_framework/examples/: __init__.py  customer_server_tests.py  multi_server_test_runner.py  technician_server_tests.py
sessions/CNS422/code/infrastructure/tests/: __init__.py  test_appointment_server.py  test_appointment_server_rest_api.py  test_customer_server.py  test_customer_server_rest_api.py  test_mock_data.py  test_models.py  test_technician_server.py  test_technician_server_rest_api.py  test_utils.py
sessions/CNS422/code/scripts/: setup-environment.sh
sessions/CNS429/: README.md
sessions/INV510/: README.md
