[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-agent-infrastructure"
version = "0.1.0"
description = "MCP Servers and Infrastructure for Insurance Agent Demo"
authors = [
    {name = "Demo Team", email = "demo@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
    "requests>=2.32.5",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
customer-mcp-server = "mcp_servers.customer_server.server:main"
customer-rest-server = "mcp_servers.customer_server.server_rest:main"
customer-combined-server = "mcp_servers.customer_server.combined_server:main"
appointment-mcp-server = "mcp_servers.appointment_server.server:main"
appointment-rest-server = "mcp_servers.appointment_server.server_rest:main"
appointment-combined-server = "mcp_servers.appointment_server.combined_server:main"
technician-mcp-server = "mcp_servers.technician_server.server:main"
technician-rest-server = "mcp_servers.technician_server.server_rest:main"
technician-combined-server = "mcp_servers.technician_server.combined_server:main"

[project.urls]
Homepage = "https://github.com/example/insurance-agent-chatbot"
Repository = "https://github.com/example/insurance-agent-chatbot.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "mock_data: Mock data validation tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
