[project]
name = "agent-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.38.2,<6.0.0",
    "boto3>=1.40.52,<2.0.0",
    "fastapi>=0.116.1,<1.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "a2a-sdk>=0.3.0,<0.4.0",
]

[project.scripts]
"ui" = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
